[1.1.31] update functional utility classes
- update grunt configuration and style consistency
- update rule-set-builder module with ‘state’ param
- update pre-loader and frame modules and snippets
- update width module
- update height module
- update color module (with hover state)
- update background-color module (with hover state)
- update border-color module (with hover state)
- add white-space module
- add opacity module
- add transitions module
- add form-multi-input element module
- add form-select element module
- add counter-list element module
- split alignment fragment of wrap module into horizontal-align module
- un-list skeleton module

--- a/assets/sass/base/_configuration.scss
+++ b/assets/sass/base/_configuration.scss
@@ -64,6 +64,10 @@ $trackings: (
 //////////////////////////////
 // # colors
 //////////////////////////////
+$brand-colors: (
+  // ...
+);
+
 $neutral-colors: (
   'black': #000,
   'near-black': #111,
@@ -90,14 +94,10 @@ $notification-colors: (
   // ...
 );
 
-$brand-colors: (
-  // ...
-);
-
 $colors: concat-maps(
+  $brand-colors,
   $neutral-colors,
-  $notification-colors,
-  $brand-colors
+  $notification-colors
   // ...
 );
 
@@ -119,4 +119,25 @@ $border-radii: (
   '2': 0.25em,
   '3': 0.5em,
   '4': 1em,
+);
+
+//////////////////////////////
+// # opacity
+//////////////////////////////
+$opacities: (
+  '0': 0,
+  '1': 0.15,
+  '2': 0.6,
+  '3': 0.85,
+  '4': 1,
+);
+
+//////////////////////////////
+// # transition
+//////////////////////////////
+$transition-durations: (
+  '0': 0,
+  '1': 0.15s,
+  '2': 0.35s,
+  '3': 0.85s,
 );
