--- a/assets/sass/base/_wrap.scss
+++ b/assets/sass/base/_wrap.scss
@@ -1,13 +1,7 @@
-// # list
+// # wrap
 //////////////////////////////////////////////////////////////////////////////////////////
 //////////////////////////////////////////////////////////////////////////////////////////
 //////////////////////////////////////////////////////////////////////////////////////////
 
-@include make-responsive-rulesets((
-  (
-    'selector': '.list',
-    'declarations': (
-      list-style: none,
-    ),
-  ),
-));
+$wrap-config-RSON: make-RSON($wraps, '.wp', 'max-width');
+@include make-responsive-rulesets($wrap-config-RSON);
