--- a/assets/sass/element/_list.scss
+++ b/assets/sass/element/_list.scss
@@ -1,12 +1,8 @@
-// # color
+// # list
 //////////////////////////////////////////////////////////////////////////////////////////
 //////////////////////////////////////////////////////////////////////////////////////////
 //////////////////////////////////////////////////////////////////////////////////////////
 
-$color-base-RSON: make-RSON($colors, '.c', 'color');
-$color-hover-RSON: make-RSON($colors, '.hov-c', 'color', ':hover');
-$full-color-RSON: concat-lists(
-  $color-base-RSON,
-  $color-hover-RSON
-);
-@include make-responsive-rulesets($full-color-RSON);
+.list {
+  list-style: none;
+}
