--- a/assets/sass/base/_background-color.scss
+++ b/assets/sass/base/_background-color.scss
@@ -3,6 +3,10 @@
 //////////////////////////////////////////////////////////////////////////////////////////
 //////////////////////////////////////////////////////////////////////////////////////////
 
-@include make-responsive-rulesets(
-  make-RSON($colors, '.bgc', 'background-color')
+$background-color-base-RSON: make-RSON($colors, '.bgc', 'background-color');
+$background-color-hover-RSON: make-RSON($colors, '.hov-bgc', 'background-color', ':hover');
+$full-background-color-RSON: concat-lists(
+  $background-color-base-RSON,
+  $background-color-hover-RSON
 );
+@include make-responsive-rulesets($full-background-color-RSON);
