--- a/assets/sass/base/_border-color.scss
+++ b/assets/sass/base/_border-color.scss
@@ -3,6 +3,10 @@
 //////////////////////////////////////////////////////////////////////////////////////////
 //////////////////////////////////////////////////////////////////////////////////////////
 
-@include make-responsive-rulesets(
-  make-RSON($colors, '.bc', 'border-color')
+$border-color-base-RSON: make-RSON($colors, '.bc', 'border-color');
+$border-color-hover-RSON: make-RSON($colors, '.hov-bc', 'border-color', ':hover');
+$full-border-color-RSON: concat-lists(
+  $border-color-base-RSON,
+  $border-color-hover-RSON
 );
+@include make-responsive-rulesets($full-border-color-RSON);
