--- a/assets/sass/base/_width.scss
+++ b/assets/sass/base/_width.scss
@@ -5,14 +5,59 @@
 
 @include make-responsive-rulesets((
   (
+    'selector': '.w-auto',
+    'declarations': (
+      width: auto,
+    ),
+  ), (
+    'selector': '.w-0',
+    'declarations': (
+      width: 0,
+    ),
+  ), (
+    'selector': '.w-25',
+    'declarations': (
+      width: 25%,
+    ),
+  ), (
+    'selector': '.w-50',
+    'declarations': (
+      width: 50%,
+    ),
+  ), (
+    'selector': '.w-75',
+    'declarations': (
+      width: 75%,
+    ),
+  ), (
     'selector': '.w-100',
     'declarations': (
       width: 100%,
     ),
   ), (
-    'selector': '.mw-100',
+    'selector': '.w-100-min',
+    'declarations': (
+      min-width: 100%,
+    ),
+  ), (
+    'selector': '.w-100-max',
     'declarations': (
       max-width: 100%,
+    ),
+  ), (
+    'selector': '.w-100-vw',
+    'declarations': (
+      width: 100vw,
+    ),
+  ), (
+    'selector': '.w-100-vw-min',
+    'declarations': (
+      min-width: 100vw,
+    ),
+  ), (
+    'selector': '.w-100-vw-max',
+    'declarations': (
+      max-width: 100vw,
     ),
   ),
 ));
