--- a/assets/sass/component/_preloader.scss
+++ b/assets/sass/component/_preloader.scss
@@ -8,16 +8,13 @@
   z-index: 2000;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
 }
 
 //////////////////////////////
 // # content body
 //////////////////////////////
 body {
-  // *
-  // js enhancement
+  // * js enhancement
   .js & {
     position: relative;
     z-index: 1000;
