[1.1.32] update functional utility classes
- restructure base into nested folder structures for easier navigation
- update grid to allow grid constraint changes on media query (resolve
specificity issue by compiling RSONs first)
- add tiny-table element
- add font-family property class, and hooked to configuration
- minor updates to various class names for consistency

--- a/assets/sass/base/configurations/_layout.scss
+++ b/assets/sass/base/configurations/_layout.scss
@@ -1,8 +1,29 @@
-// # font face declarations
+// # layout
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 
-// .helvetica {
-//   font-family: 'helvetica neue', helvetica, sans-serif;
-// }
+$screen-sizes: (
+  's': 40em,
+  'm': 60em,
+  'l': 80em,
+  // ...
+);
+
+$wraps: (
+  's': 40em,
+  'm': 60em,
+  'l': 80em,
+  // ...
+);
+
+$spacings: (
+  '0': 0,
+  '1': 0.25em,
+  '2': 0.5em,
+  '3': 1em,
+  '4': 2em,
+  '5': 4em,
+  '6': 8em,
+  '7': 16em,
+);
