--- a/assets/sass/base/configurations/_theme.scss
+++ b/assets/sass/base/configurations/_theme.scss
@@ -1,74 +1,11 @@
-// # configuration
+// # theme
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 
-// # layout
+// # color
 ////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////
-$screen-sizes: (
-  's': 40em,
-  'm': 60em,
-  'l': 80em,
-  // ...
-);
-
-$wraps: (
-  's': 40em,
-  'm': 60em,
-  'l': 80em,
-  // ...
-);
-
-$spacings: (
-  '0': 0,
-  '1': 0.25em,
-  '2': 0.5em,
-  '3': 1em,
-  '4': 2em,
-  '5': 4em,
-  '6': 8em,
-  '7': 16em,
-);
-
-// # typography
-////////////////////////////////////////////////////////////
-////////////////////////////////////////////////////////////
-$base-font-size: 100%;
-
-$font-families: (
-  'helvetica': 'helvetica neue, helvetica, sans-serif',
-  // ...
-);
-
-$type-scale: (
-  '1': 3em,
-  '2': 2.25em,
-  '3': 1.5em,
-  '4': 1.25em,
-  '5': 1em,
-  '6': 0.875em,
-);
-
-$line-heights: (
-  'copy': 1.45,
-  'title': 1.25,
-  'solid': 1,
-);
-
-$trackings: (
-  'track': 0.05em,
-  'tight': -0.5em,
-  'wide': 0.25em,
-);
-
-// # theme-ing
-////////////////////////////////////////////////////////////
-////////////////////////////////////////////////////////////
-
-//////////////////////////////
-// # colors
-//////////////////////////////
 $brand-colors: (
   // ...
 );
@@ -106,9 +43,9 @@ $colors: concat-maps(
   // ...
 );
 
-//////////////////////////////
 // # border
-//////////////////////////////
+////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////
 $border-widths: (
   '0': 0,
   '1': 0.125em,
@@ -126,9 +63,9 @@ $border-radii: (
   '4': 1em,
 );
 
-//////////////////////////////
 // # opacity
-//////////////////////////////
+////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////
 $opacities: (
   '0': 0,
   '1': 0.15,
@@ -137,9 +74,9 @@ $opacities: (
   '4': 1,
 );
 
-//////////////////////////////
 // # transition
-//////////////////////////////
+////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////
 $transition-durations: (
   '0': 0,
   '1': 0.15s,
