--- a/assets/sass/base/properties/layout/_wrap.scss
+++ b/assets/sass/base/properties/layout/_wrap.scss
@@ -3,5 +3,6 @@
 //////////////////////////////////////////////////////////////////////////////////////////
 //////////////////////////////////////////////////////////////////////////////////////////
 
-$wrap-config-RSON: make-RSON($wraps, '.wp', 'max-width');
-@include make-responsive-rulesets($wrap-config-RSON);
+@include make-responsive-rulesets(
+  make-RSON($wraps, '.wp', 'max-width')
+);
