--- a/assets/sass/base/properties/theme/_border.scss
+++ b/assets/sass/base/properties/theme/_border.scss
@@ -7,7 +7,7 @@
   (
     'selector': '.b-none',
     'declarations': (
-      border: 0,
+      border: none,
     ),
   ), (
     'selector': '.b-all',
