--- a/assets/sass/composition/_frame.scss
+++ b/assets/sass/composition/_frame.scss
@@ -26,7 +26,7 @@
 //////////////////////////////
 // # mast
 //////////////////////////////
-.frame__mast-wrap {
+.frame__mast-wp {
   position: relative;
   z-index: 1230;
 }
@@ -34,7 +34,7 @@
 //////////////////////////////
 // # main
 //////////////////////////////
-.frame__main-wrap {
+.frame__main-wp {
   position: relative;
   z-index: 1210;
 }
@@ -46,4 +46,4 @@
 //////////////////////////////
 // # base
 //////////////////////////////
-.frame__base-wrap {}
+.frame__base-wp {}
