--- a/assets/sass/element/_tiny-table.scss
+++ b/assets/sass/element/_tiny-table.scss
@@ -1,8 +1,12 @@
-// # type scale
+// # tiny table
 //////////////////////////////////////////////////////////////////////////////////////////
 //////////////////////////////////////////////////////////////////////////////////////////
 //////////////////////////////////////////////////////////////////////////////////////////
 
-@include make-responsive-rulesets(
-  make-RSON($type-scale, '.f', 'font-size')
-);
+.tiny-table-wp {
+  overflow-y: auto;
+}
+
+.tiny-table {
+  min-width: map-get($screen-sizes, 's');
+}
