[1.1.34] update script architecture
- update loader module
- update analytics module
- update web font loader module
- update web font config
- add page scroll module
- update view control module
- add navigation control module
- update general view contexts
- add page ready and complete modules

--- a/assets/sass/component/_loader.scss
+++ b/assets/sass/component/_loader.scss
@@ -1,9 +1,9 @@
-// # preloader
+// # loader
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 
-.preloader {
+.loader {
   position: fixed;
   z-index: 2000;
   top: 0;
