--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -95,7 +95,7 @@
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 
-@import "component/preloader";
+@import "component/loader";
 
 
 // # composition
