[1.1.42] add property classes, refactor
- remove redundant base configuration
- add positioning control module and configuration
- add overflow module
- add z-index module
- add fill module
- add text-indent module
- update border radius module
- update border width module

--- a/assets/sass/base/configurations/_layout.scss
+++ b/assets/sass/base/configurations/_layout.scss
@@ -29,3 +29,12 @@ $spacings: (
   '6': 8em,
   '7': 16em,
 );
+
+$positionings: (
+  'n2': -2em,
+  'n1': -1em,
+  '0': 0,
+  '1': 1em,
+  '2': 2em,
+  // ...
+);
