--- a/assets/sass/base/properties/theme/_border-width.scss
+++ b/assets/sass/base/properties/theme/_border-width.scss
@@ -3,7 +3,7 @@
 //////////////////////////////////////////////////////////////////////////////////////////
 //////////////////////////////////////////////////////////////////////////////////////////
 
-$border-width-config-RSON: make-RSON($border-widths, '.bw', ('border-width'));
+$border-width-config-RSON: make-RSON($border-widths, '.bw', 'border-width');
 $border-width-static-RSON: (
   (
     'selector': '.bw-top-0',
