--- a/assets/sass/base/properties/theme/_border-radius.scss
+++ b/assets/sass/base/properties/theme/_border-radius.scss
@@ -3,7 +3,7 @@
 //////////////////////////////////////////////////////////////////////////////////////////
 //////////////////////////////////////////////////////////////////////////////////////////
 
-$border-radius-config-RSON: make-RSON($border-radii, '.brd', ('border-radius'));
+$border-radius-config-RSON: make-RSON($border-radii, '.brd', 'border-radius');
 $border-radius-static-RSON: (
   (
     'selector': '.brd-100',
