[1.1.43] add variable configuration indicators

--- a/assets/sass/base/configurations/_theme.scss
+++ b/assets/sass/base/configurations/_theme.scss
@@ -53,6 +53,7 @@ $border-widths: (
   '3': 0.5em,
   '4': 1em,
   '5': 2em,
+  // ...
 );
 
 $border-radii: (
@@ -61,6 +62,7 @@ $border-radii: (
   '2': 0.25em,
   '3': 0.5em,
   '4': 1em,
+  // ...
 );
 
 // # opacity
@@ -72,6 +74,7 @@ $opacities: (
   '2': 0.6,
   '3': 0.85,
   '4': 1,
+  // ...
 );
 
 // # transition
@@ -82,4 +85,5 @@ $transition-durations: (
   '1': 0.15s,
   '2': 0.35s,
   '3': 0.85s,
+  // ...
 );
